Clean project and href to page 11

--- a/src/pages/itinerario/days/day10.astro
+++ b/src/pages/itinerario/days/day10.astro
@@ -32,9 +32,11 @@ const day = dias[9]
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg mt-1">
-                    Primer dia entero de Tokio, disfrutaremos del Oeste, donde visitaremos los distritos de <a href=""
-                                                                                                               class="underline decoration-sky-500 font-bold">Shibuya</a>
-                    y <a href="" class="underline decoration-sky-500 font-bold">Shinjuku</a>.
+                    Primer dia entero de Tokio, disfrutaremos del Oeste, donde visitaremos los distritos de <a
+                        href="https://maps.app.goo.gl/VsQoDAfVFNNiTLmz8"
+                        class="underline decoration-sky-500 font-bold">Shibuya</a>
+                    y <a href="https://maps.app.goo.gl/FcfyetwCMbeHVpSm6"
+                         class="underline decoration-sky-500 font-bold">Shinjuku</a>.
                 </p>
                 <p class="text-lg mt-1">
                     Shibuya es el distrito de Tokio famoso por su cruce peatonal en forma de diamante y su vibrante
@@ -44,39 +46,48 @@ const day = dias[9]
 
             </div>
             <div class="px-2 pt-4 md:w-1/3">
-                <p class="text-lg font-bold mt-1">Lo genial de Tokyo es que no hay madrugar mucho, ya que es una ciduad
+                <p class="text-lg font-bold mt-1">Lo genial de Tokyo es que no hay madrugar mucho, ya que es una ciudad
                     24h</p>
                 <p class="text-lg font-bold mt-1">Este seria un itinerario de lo que se podria seguir:</p>
-                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Estacion de
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/VsQoDAfVFNNiTLmz8"
+                                             class="underline decoration-sky-500 font-bold">Estacion de
                     Shibuya</a>
                 </p>
-                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">El cruze de
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/ATKjaqDRJDkX7LNj6"
+                                             class="underline decoration-sky-500 font-bold">El cruze de
                     Shibuya</a>
-                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Estatua de
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/bZZCA3EXsVqu73pi6"
+                                             class="underline decoration-sky-500 font-bold">Estatua de
                     Hachiko</a>
                 </p>
                 <p class="text-lg mt-1">· Perdernos por las calles de Shibuya
                 </p>
-                <p class="text-lg mt-1">· Ver desde fuera el <a href="" class="underline decoration-sky-500 font-bold">gimnasio
+                <p class="text-lg mt-1">· Ver desde fuera el <a href="https://maps.app.goo.gl/qFmZGREt6r6ESsdH7"
+                                                                class="underline decoration-sky-500 font-bold">gimnasio
                     nacional Yoyogi</a>
                 </p>
-                <p class="text-lg mt-1">· Pasar por la famosa calle de gacha <a href=""
-                                                                                class="underline decoration-sky-500 font-bold">Takeshita
+                <p class="text-lg mt-1">· Pasar por la famosa calle de gacha <a
+                        href="https://maps.app.goo.gl/Uj6qnCdWRVNtu6Mm9"
+                        class="underline decoration-sky-500 font-bold">Takeshita
                     Street</a>, donde es muy famoso
                     comerse una crepe.
                 </p>
-                <p class="text-lg mt-1">· Visitar el santuario mas famoso de Tokyo, <a href=""
-                                                                                       class="underline decoration-sky-500 font-bold">Santuario
+                <p class="text-lg mt-1">· Visitar el santuario mas famoso de Tokyo, <a
+                        href="https://maps.app.goo.gl/iG7Hnqmu24nxUonq8"
+                        class="underline decoration-sky-500 font-bold">Santuario
                     Meiji</a>.
                 </p>
-                <p class="text-lg mt-1">· Continuaremos por <a href="" class="underline decoration-sky-500 font-bold">Shinjuku</a>,
+                <p class="text-lg mt-1">· Continuaremos por <a href="https://maps.app.goo.gl/PHVEvoXvpGgkB3pC9"
+                                                               class="underline decoration-sky-500 font-bold">Shinjuku</a>,
                     donde primero visitaremos el antiguo mercado negro
-                    Omoide Yococho
+                    <a href="https://maps.app.goo.gl/DHfdYUqy2TwYYDNp7" class="underline decoration-sky-500 font-bold">Omoide
+                        Yococho</a>
                 </p>
-                <p class="text-lg mt-1">· Acabaremos visitando la zona con mas vida nocturna de la ciudad, <a href=""
-                                                                                                              class="underline decoration-sky-500 font-bold">Golden
+                <p class="text-lg mt-1">· Acabaremos visitando la zona con mas vida nocturna de la ciudad, <a
+                        href="https://maps.app.goo.gl/fH1Pi5pbqmYFyeQi6"
+                        class="underline decoration-sky-500 font-bold">Golden
                     Gai</a> y
-                    <a href="" class="underline decoration-sky-500 font-bold">Kabukicho</a>
+                    <a href="https://maps.app.goo.gl/tmvFxosdqhFr71jv8" class="underline decoration-sky-500 font-bold">Kabukicho</a>
                 </p>
             </div>
         </div>
