--- a/src/pages/itinerario/days/day11.astro
+++ b/src/pages/itinerario/days/day11.astro
@@ -32,32 +32,38 @@ const day = dias[10]
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg mt-1">
-                    En este dia pasearemos por <a href="" class="underline decoration-sky-500 font-bold">Asakusa</a> el
-                    barrio mas tradicional de Tokyo y acabaremos con <a href=""
+                    En este dia pasearemos por <a href="https://maps.app.goo.gl/uXNcofE8815vxL587"
+                                                  class="underline decoration-sky-500 font-bold">Asakusa</a> el
+                    barrio mas tradicional de Tokyo y acabaremos con <a href="https://maps.app.goo.gl/RvMFHwTAevUgHWdw8"
                                                                         class="underline decoration-sky-500 font-bold">Akihabara</a>
                     con lo mas electronico
                 </p>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg font-bold mt-1">Este seria un itinerario de lo que se podria seguir:</p>
-                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Templo Sensoji</a>,
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/n6xxwrmgbmnUh1Wv7"
+                                             class="underline decoration-sky-500 font-bold">Templo Sensoji</a>,
                     el mas antiguo de Tokyo y de las mayores atracciones de Tokyo, con puestos dentro y unas entradas
                     increibles.
                 </p>
-                <p class="text-lg mt-1">· Nos hacercaremos a ver el <a href=""
+                <p class="text-lg mt-1">· Nos hacercaremos a ver el <a href="https://maps.app.goo.gl/ktrsoNLTZYDcMc2WA"
                                                                        class="underline decoration-sky-500 font-bold">rio
                     Sumida</a>
                 </p>
-                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Akihabara</a>, la
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/RvMFHwTAevUgHWdw8"
+                                             class="underline decoration-sky-500 font-bold">Akihabara</a>, la
                     zona comercial mas famosa para buscar anime, manga y electronica
                 </p>
-                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Tienda Mandarake en
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/TEBzGd2yM24Fb46J9"
+                                             class="underline decoration-sky-500 font-bold">Tienda Mandarake en
                     Tokyo</a>, tienda de 5 pisos de manga, anime y coleccionismo.
                 </p>
-                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Ameyoko</a>, zona
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/BMFSnRwgFWCkoUSP9"
+                                             class="underline decoration-sky-500 font-bold">Ameyoko</a>, zona
                     comercial debajo de las vias del tren, perfecta para comprar ropa, zapatos y souvenirs.
                 </p>
-                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Parque de Ueno</a>,
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/DrRsDPauHwn16qrg9"
+                                             class="underline decoration-sky-500 font-bold">Parque de Ueno</a>,
                     un oasis en medio de la ciudad.
                 </p>
             </div>
