--- a/src/pages/itinerario/days/day9.astro
+++ b/src/pages/itinerario/days/day9.astro
@@ -32,7 +32,8 @@ const day = dias[8]
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg mt-1">
-                    En este dia saldremos desde <a href="" class="underline decoration-sky-500 font-bold">Kyoto
+                    En este dia saldremos desde <a href="https://maps.app.goo.gl/8kkgAAx5FTsD1Jyu8"
+                                                   class="underline decoration-sky-500 font-bold">Kyoto
                     direccion la capital de Japon, Tokyo</a>, la ciudad mas poblada del
                     mundo, con mas de 35 millones de personas en toda la region.
                 </p>
@@ -47,18 +48,23 @@ const day = dias[8]
                 <p class="text-lg mt-1">En este dia iremos a Tokyo, primero a nuestra base de operacion y
                     acaberemos en Akihabara por una razon especial.</p>
                 <p class="text-lg font-bold mt-1">Este seria un itinerario de lo que se podria seguir:</p>
-                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Ruta desde Kyoto a
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/8kkgAAx5FTsD1Jyu8"
+                                             class="underline decoration-sky-500 font-bold">Ruta desde Kyoto a
                     Tokyo en JR</a>
                 </p>
-                <p class="text-lg mt-1">· Llegada a la <a href="" class="underline decoration-sky-500 font-bold">base de
+                <p class="text-lg mt-1">· Llegada a la <a href="https://maps.app.goo.gl/1DKKc6Er7z7v5ZUH8"
+                                                          class="underline decoration-sky-500 font-bold">base de
                     operaciones</a>, muy cerca de la zona de fiesta nocturna de
-                    <a href="" class="underline decoration-sky-500 font-bold">Shinjuku</a> y sobretodo del Gobierno
+                    <a href="https://maps.app.goo.gl/uXujGmdLXiDDUWCP7" class="underline decoration-sky-500 font-bold">Shinjuku</a>
+                    y sobretodo del Gobierno
                     Metropolitano de Tokio.
                 </p>
-                <p class="text-lg mt-1">· Subir al <a href="" class="underline decoration-sky-500 font-bold">gobierno
+                <p class="text-lg mt-1">· Subir al <a href="https://maps.app.goo.gl/J4nS7dLVffmvL92r5"
+                                                      class="underline decoration-sky-500 font-bold">gobierno
                     metropolitano de Tokyo</a>, que cuenta con un mirador gratuito
                 </p>
-                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Akihabara</a>, el
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/RvMFHwTAevUgHWdw8"
+                                             class="underline decoration-sky-500 font-bold">Akihabara</a>, el
                     epicentro de la cultura otaku y la electrónica en Tokio, repleto
                     de tiendas de manga, anime, gadgets y videojuegos.</p>
             </div>
