All hrefs and items without restaurants

--- a/src/pages/itinerario/days/day14.astro
+++ b/src/pages/itinerario/days/day14.astro
@@ -32,24 +32,30 @@ const day = dias[13]
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg mt-1">
-                    Una muy buena visita para este dia es la isla artificial de <a href=""
-                                                                                   class="underline decoration-sky-500 font-bold">Odaiba</a>,
+                    Una muy buena visita para este dia es la isla artificial de <a
+                        href="https://maps.app.goo.gl/aGFjc8SNFMpyxrv49"
+                        class="underline decoration-sky-500 font-bold">Odaiba</a>,
                     situada en al bahia de Tokyo.
                 </p>
-                <p>Aqui visitaremos la <a href="" class="underline decoration-sky-500 font-bold">estatua de la
-                    libertad</a>, un <a href="" class="underline decoration-sky-500 font-bold">gundam gigante</a> y
+                <p>Aqui visitaremos la <a href="https://maps.app.goo.gl/x9dTHH99jecxePtx9"
+                                          class="underline decoration-sky-500 font-bold">estatua de la
+                    libertad</a>, un <a href="https://maps.app.goo.gl/EA6Hc8d15FpHz9zM9"
+                                        class="underline decoration-sky-500 font-bold">gundam gigante</a> y
                     cojeremos un tren sin conductor.</p>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
-                <p class="text-lg font-bold mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Línea
+                <p class="text-lg font-bold mt-1">· <a href="https://maps.app.goo.gl/D1LsatUDXq9ZW5E78"
+                                                       class="underline decoration-sky-500 font-bold">Línea
                     Yurikamome</a>, una línea sin conductor</p>
-                <p class="text-lg font-bold mt-1">· <a href="" class="underline decoration-sky-500 font-bold">El puente
+                <p class="text-lg font-bold mt-1">· <a href="https://maps.app.goo.gl/D1LsatUDXq9ZW5E78"
+                                                       class="underline decoration-sky-500 font-bold">El puente
                     Rainbow Bridge</a> es uno de los atractivos de Odaiba, así que
                     la principal manera de llegar a esta isla artificial de la bahía de Tokio.</p>
                 <p class="text-lg font-bold mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Estatua de
                     la libertad</a>, una replica de la estatua de la liberad.</p>
-                <p class="text-lg font-bold mt-1">· Desde 2017 hay un nuevo Gundam en Odaiba: un <a href=""
-                                                                                                    class="underline decoration-sky-500 font-bold">Gundam
+                <p class="text-lg font-bold mt-1">· Desde 2017 hay un nuevo Gundam en Odaiba: un <a
+                        href="https://maps.app.goo.gl/EA6Hc8d15FpHz9zM9"
+                        class="underline decoration-sky-500 font-bold">Gundam
                     Unicorn</a> (se
                     mueve)</p>
                 <p class="text-lg font-bold mt-1">· Por la tarde tendremos hueco para volver a ir a algun sitio que nos
