--- a/src/pages/itinerario/days/day12.astro
+++ b/src/pages/itinerario/days/day12.astro
@@ -32,28 +32,34 @@ const day = dias[11]
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg mt-1">
-                    Es momento de visitar el barrio de <a href=""
+                    Es momento de visitar el barrio de <a href="https://maps.app.goo.gl/dVsuDpSVMLtb9MSg8"
                                                           class="underline decoration-sky-500 font-bold">Ginza</a>
-                    famoso por sus tiendas caras y luego un paseo por <a href=""
-                                                                         class="underline decoration-sky-500 font-bold">el
+                    famoso por sus tiendas caras y luego un paseo por <a
+                        href="https://maps.app.goo.gl/C4iiRtjYKMNr8oWTA"
+                        class="underline decoration-sky-500 font-bold">el
                     gran palacio imperial</a>.
                 </p>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg font-bold mt-1">Este seria un itinerario de lo que se podria seguir:</p>
-                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Ginza</a>, su
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/dVsuDpSVMLtb9MSg8"
+                                             class="underline decoration-sky-500 font-bold">Ginza</a>, su
                     fantastica arquitectura y sus tiendas caras nos dejaran boqueabiertos.
                 </p>
-                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Estacion central de
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/J5CWNZZbY5oWhDiEA"
+                                             class="underline decoration-sky-500 font-bold">Estacion central de
                     Tokyo</a>, la explaremos porque cuenta con muchas tiendas y restaurantes en el interior.
                 </p>
-                <p class="text-lg mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Palacio Imperial</a>,
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/C4iiRtjYKMNr8oWTA"
+                                             class="underline decoration-sky-500 font-bold">Palacio Imperial</a>,
                     residencia del actual emperador de Japon.
                 </p>
-                <p class="text-lg mt-1">· Ir hasta la <a href="" class="underline decoration-sky-500 font-bold">Torre de
+                <p class="text-lg mt-1">· Ir hasta la <a href="https://maps.app.goo.gl/hE611hEK88xXQgKR8"
+                                                         class="underline decoration-sky-500 font-bold">Torre de
                     Tokyo</a> y subir.
                 </p>
-                <p class="text-lg mt-1">· Entrar al templo <a href="" class="underline decoration-sky-500 font-bold">Zojoji</a>,
+                <p class="text-lg mt-1">· Entrar al templo <a href="https://maps.app.goo.gl/2RzBJEfUztxZ3W9ZA"
+                                                              class="underline decoration-sky-500 font-bold">Zojoji</a>,
                     justo debajo de la Torre de Tokyo.
                 </p>
             </div>
