--- a/src/pages/itinerario/days/day13.astro
+++ b/src/pages/itinerario/days/day13.astro
@@ -32,25 +32,30 @@ const day = dias[12]
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/3">
                 <p class="text-lg mt-1">
-                    Para este momento y para descansar un poco de Tokyo, se recomiendo hacer una excursion a <a href=""
-                                                                                                                class="underline decoration-sky-500 font-bold">Kamakura</a>,
+                    Para este momento y para descansar un poco de Tokyo, se recomiendo hacer una excursion a <a
+                        href="https://maps.app.goo.gl/VLzcsCh5DwJPbgrv9"
+                        class="underline decoration-sky-500 font-bold">Kamakura</a>,
                     es una ciudad costera de la prefectura de Kanagawa, en la región de Kanto. Se encuentra a poco menos
                     de una hora de la capital, por lo que es una excursión muy popular desde Tokio.
                 </p>
-                <p>Aqui visitaremos unos cuantos templos, <a href="" class="underline decoration-sky-500 font-bold">el
+                <p>Aqui visitaremos unos cuantos templos, <a href="https://maps.app.goo.gl/m1FjekPsXdF37xxd8"
+                                                             class="underline decoration-sky-500 font-bold">el
                     buda gigante</a> y haremos una ruta preciosa en tren por la
                     costa</p>
             </div>
             <div class="px-2 pt-4 md:w-1/3">
-                <p class="text-lg font-bold mt-1">· <a href=""
+                <p class="text-lg font-bold mt-1">· <a href="https://maps.app.goo.gl/m1FjekPsXdF37xxd8"
                                                        class="underline decoration-sky-500 font-bold">Kotaku-in</a>,
                     templo que cuenta con su gran buda en el exterior.</p>
-                <p class="text-lg font-bold mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Templo
+                <p class="text-lg font-bold mt-1">· <a href="https://maps.app.goo.gl/gh1GcXGWvoSekqyM6"
+                                                       class="underline decoration-sky-500 font-bold">Templo
                     Hase-dera</a>, con centenares de estatuas de jizo.</p>
-                <p class="text-lg font-bold mt-1">· <a href="" class="underline decoration-sky-500 font-bold">Calle
+                <p class="text-lg font-bold mt-1">· <a href="https://maps.app.goo.gl/cQha3hWa5Jg3U2xRA"
+                                                       class="underline decoration-sky-500 font-bold">Calle
                     comercial Komachi</a>, para comer algo o comprar algun
                     recuerdo.</p>
-                <p class="text-lg font-bold mt-1">· Cojer el <a href="" class="underline decoration-sky-500 font-bold">tren
+                <p class="text-lg font-bold mt-1">· Cojer el <a href="https://maps.app.goo.gl/PEApHTTJwGvzYN2q8"
+                                                                class="underline decoration-sky-500 font-bold">tren
                     Enoden</a>, disfrutando de un magnifico paseo por la
                     costa.</p>
             </div>
