--- a/src/pages/playlist/[id].astro
+++ b/src/pages/playlist/[id].astro
@@ -1,9 +1,11 @@
 ---
+import PlaylistCard from "../../components/PlaylistCard.astro";
 const {id} = Astro.params;
 import PageHeader from "../../components/PageHeader.astro";
 import PlayButton from "../../components/PlayButton.astro";
 import Layout from "../../layouts/Layout.astro";
-import {allPlaylists} from "../../lib/data";
+import {allPlaylists, morePlaylists} from "../../lib/data";
+import BadgesResume from "../../components/BadgesResume.astro";
 
 export function getStaticPaths() {
     return allPlaylists.map((playlist) => ({
@@ -44,6 +46,12 @@ const playlist = allPlaylists.find((playlist) => playlist.id === id);
             </div>
         </div>
 
+        <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
+            {playlist.badges.map((badge) =>
+                    <BadgesResume badge={badge}/>
+            )}
+
+        </div>
         <div
                 class="absolute h-screen inset-0 z-[-1] bg-gradient-to-b from-context"
                 style=`--context-color:${playlist?.color.accent}`
