Added images to days

--- a/src/pages/itinerario/days/day1.astro
+++ b/src/pages/itinerario/days/day1.astro
@@ -44,11 +44,16 @@ const day = dias[0]
                     destino
                     <a href="https://maps.app.goo.gl/6UfN3Kv3NNADE8RM8" class="underline decoration-sky-500 font-bold">Roma
                         Fiumicino</a>.</p>
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1695993893/japon-2weeks/nue4jmmlb5i47xlsepeb.jpg">
+                <span class="text-center text-sm">Aeropuerto de Tokyo Haneda</span>
                 <p class="text-lg mt-1">Después de unas 2h aproximadas de vuelo, tocará esperar un rato hasta que salga
                     nuestro próximo vuelo
                     en
                     dirección al Aeropuerto de <a class="underline decoration-sky-500 font-bold"
                                                   href="https://maps.app.goo.gl/jJveBRnRXPidyzzm6">Tokyo Haneda</a>.</p>
+
+
                 <p class="text-lg mt-1">En el vuelo de una duración aproximada de 12 horas y 30 minutos y de una escala
                     horaria de 7 horas de
                     diferencia, en el que atravesamos unos 10 países, todo Europa y Asia, habremos llegado al segundo
