--- a/src/pages/itinerario/days/day2.astro
+++ b/src/pages/itinerario/days/day2.astro
@@ -31,25 +31,47 @@ const day = dias[1]
         </div>
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg mt-1">Después de tantas y tantas horas de avión deberíamos llegar a  <a href="https://maps.app.goo.gl/jJveBRnRXPidyzzm6" class="underline decoration-sky-500 font-bold">Tokio Haneda</a> aproximadamente a las 10:40, donde tocará recoger maletas, pasar controles etc.
+                <p class="text-lg mt-1">Después de tantas y tantas horas de avión deberíamos llegar a <a
+                        href="https://maps.app.goo.gl/jJveBRnRXPidyzzm6" class="underline decoration-sky-500 font-bold">Tokio
+                    Haneda</a> aproximadamente a las 10:40, donde tocará recoger maletas, pasar controles etc.
                 </p>
-                <p class="text-lg mt-1">Con las pertenecias en mano, hay que verificar el JRPass y sacar el dinero correspondiente cada uno.
+                <p class="text-lg mt-1">Con las pertenecias en mano, hay que verificar el JRPass y sacar el dinero
+                    correspondiente cada uno.
                 </p>
-                <p class="text-lg mt-1">Una vez ya tengamos todas nuestras pertenencias, hay que mirar <a href="https://maps.app.goo.gl/13csf7NXgkjJky4YA" class="underline decoration-sky-500 font-bold">cómo llegar desde el Aeropuerto a Kyoto</a>, el trayecto son unas 2 horas y media.
+                <p class="text-lg mt-1">Una vez ya tengamos todas nuestras pertenencias, hay que mirar <a
+                        href="https://maps.app.goo.gl/13csf7NXgkjJky4YA" class="underline decoration-sky-500 font-bold">cómo
+                    llegar desde el Aeropuerto a Kyoto</a>, el trayecto son unas 2 horas y media.
                 </p>
-                <p class="text-lg mt-1">Una vez en la <a href="https://maps.app.goo.gl/msPYso2STUBK71GUA" class="underline decoration-sky-500 font-bold">estación de Kyoto</a> hay que mirar <a href="https://maps.app.goo.gl/WyxgecySxsubY1Yy5" class="underline decoration-sky-500 font-bold">cómo ir hasta la casa</a>, que está a unos 40 minutos a pie.
+                <p class="text-lg mt-1">Una vez en la <a href="https://maps.app.goo.gl/msPYso2STUBK71GUA"
+                                                         class="underline decoration-sky-500 font-bold">estación de
+                    Kyoto</a> hay que mirar <a href="https://maps.app.goo.gl/WyxgecySxsubY1Yy5"
+                                               class="underline decoration-sky-500 font-bold">cómo ir hasta la casa</a>,
+                    que está a unos 40 minutos a pie.
                 </p>
             </div>
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg font-bold mt-1">Dejo una lista de sitios que quedan cerca de casa y nos los podemos ahorrar si estamos cansados otros días:
+                <p class="text-lg font-bold mt-1">Dejo una lista de sitios que quedan cerca de casa y nos los podemos
+                    ahorrar si estamos cansados otros días:
                 </p>
-                <p class="text-lg mt-1">· Subir a la <a href="https://maps.app.goo.gl/56bQfnrp1g34yWYV8" class="underline decoration-sky-500 font-bold">Torre de Kyoto</a>, la mejor opción para ya dejarla vista y tener una visión desde arriba de Kyoto.
+                <p class="text-lg mt-1">· Subir a la <a href="https://maps.app.goo.gl/56bQfnrp1g34yWYV8"
+                                                        class="underline decoration-sky-500 font-bold">Torre de
+                    Kyoto</a>, la mejor opción para ya dejarla vista y tener una visión desde arriba de Kyoto.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/egACZ1CJYEuq9GQQ7" class="underline decoration-sky-500 font-bold">Calle Pontocho</a>, es una calle peatonal famosa por su decoración nocturna llena de restaurantes.
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/FMZoRwK9Aot4SvaW9" class="underline decoration-sky-500 font-bold">Estación de Kyoto</a> y alrededores, zona bastante transitada y la estación es muy bonita</p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/ZMaAuChznZkTffvu9" class="underline decoration-sky-500 font-bold">Gión</a>, famoso barrio antiguo de Kyoto, hay bastante vida nocturna.
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1695995828/japon-2weeks/nybkm9i6i2xbuyzdzph3.jpg">
+                <span class="text-center text-sm">Vistas desde la Kyoto Tower</span>
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/egACZ1CJYEuq9GQQ7"
+                                             class="underline decoration-sky-500 font-bold">Calle Pontocho</a>, es una
+                    calle peatonal famosa por su decoración nocturna llena de restaurantes.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/FMZoRwK9Aot4SvaW9"
+                                             class="underline decoration-sky-500 font-bold">Estación de Kyoto</a> y
+                    alrededores, zona bastante transitada y la estación es muy bonita</p>
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/ZMaAuChznZkTffvu9"
+                                             class="underline decoration-sky-500 font-bold">Gión</a>, famoso barrio
+                    antiguo de Kyoto, hay bastante vida nocturna.
                 </p>
-                <p class="text-lg font-bold mt-1">Una vez cenados y de camino a casa estaría bien dar una vuelta por un <a href="https://maps.app.goo.gl/hoW7evfu8FEiQzhk7" class="underline decoration-sky-500 font-bold">7Eleven</a>.
+                <p class="text-lg font-bold mt-1">Una vez cenados y de camino a casa estaría bien dar una vuelta por un
+                    <a href="https://maps.app.goo.gl/hoW7evfu8FEiQzhk7" class="underline decoration-sky-500 font-bold">7Eleven</a>.
                 </p>
             </div>
         </div>
