--- a/src/pages/itinerario/days/day4.astro
+++ b/src/pages/itinerario/days/day4.astro
@@ -32,26 +32,51 @@ const day = dias[3]
 
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg mt-1">En el segundo día en Kyoto nos centraremos en madrugar e ir lo antes posible al <a href="https://maps.app.goo.gl/QVTM1p6a42zNysbL6" class="underline decoration-sky-500 font-bold">Bosque de Bambú de Arashiyama</a> y terminaremos viendo el <a href="https://maps.app.goo.gl/KJuq2E6GUXPtMUSi7" class="underline decoration-sky-500 font-bold">Kinkaku-Ji o Pabellón Dorado</a>.
+                <p class="text-lg mt-1">En el segundo día en Kyoto nos centraremos en madrugar e ir lo antes posible al
+                    <a href="https://maps.app.goo.gl/QVTM1p6a42zNysbL6" class="underline decoration-sky-500 font-bold">Bosque
+                        de Bambú de Arashiyama</a> y terminaremos viendo el <a
+                            href="https://maps.app.goo.gl/KJuq2E6GUXPtMUSi7"
+                            class="underline decoration-sky-500 font-bold">Kinkaku-Ji o Pabellón Dorado</a>.
                 </p>
-                <p class="text-lg mt-1">Esta ruta se puede hacer al reves, todo depende de que sitio nos apetece verlo menos transitado.
+                <p class="text-lg mt-1">Esta ruta se puede hacer al reves, todo depende de que sitio nos apetece verlo
+                    menos transitado.
                 </p>
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1695997268/japon-2weeks/o2mf6vjjuvaewvgqhbed.jpg">
+                <span class="text-center text-sm">Barrio de Arashiyama</span>
             </div>
             <div class="px-2 pt-4 md:w-1/2">
                 <p class="text-lg font-bold mt-1">Esta seria una posible ruta de lo que podriamos visitar:</p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/PioyM58M3sPXecGb7" class="underline decoration-sky-500 font-bold">Kimono Forest</a>, una preciosa exposición de pilares cilíndricos de textiles teñidos al estilo tradicional.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/PioyM58M3sPXecGb7"
+                                             class="underline decoration-sky-500 font-bold">Kimono Forest</a>, una
+                    preciosa exposición de pilares cilíndricos de textiles teñidos al estilo tradicional.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/3iA1x4HevBiK6iSU7" class="underline decoration-sky-500 font-bold">Barrio de Arashiyama</a>, el barrio del oeste de Kyoto, famoso por su calle llena de restaurantes y talleres.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/3iA1x4HevBiK6iSU7"
+                                             class="underline decoration-sky-500 font-bold">Barrio de Arashiyama</a>, el
+                    barrio del oeste de Kyoto, famoso por su calle llena de restaurantes y talleres.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/QVTM1p6a42zNysbL6" class="underline decoration-sky-500 font-bold">Bosque de Bambú de Arashiyama</a>, el famoso bosque de bambú, cuanto más tarde vayamos más gente habrá.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/QVTM1p6a42zNysbL6"
+                                             class="underline decoration-sky-500 font-bold">Bosque de Bambú de
+                    Arashiyama</a>, el famoso bosque de bambú, cuanto más tarde vayamos más gente habrá.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/oeKVZbkWcp16MFei6" class="underline decoration-sky-500 font-bold">Tenryu-ji</a>, templo al lado del bosque de bambú con jardín zen.
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1695997267/japon-2weeks/qkedykfowcgsxz5txors.jpg">
+                <span class="text-center text-sm">Bosque de bambu, en Arashiyama</span>
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/oeKVZbkWcp16MFei6"
+                                             class="underline decoration-sky-500 font-bold">Tenryu-ji</a>, templo al
+                    lado del bosque de bambú con jardín zen.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/eD28B9vNtnbcHM39A" class="underline decoration-sky-500 font-bold">Gio-ji</a>, templo para visitar en otoño con jardín de musgo y colores otoñales.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/eD28B9vNtnbcHM39A"
+                                             class="underline decoration-sky-500 font-bold">Gio-ji</a>, templo para
+                    visitar en otoño con jardín de musgo y colores otoñales.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/BBfJvwnbDXZ4THfj9" class="underline decoration-sky-500 font-bold">Ryōan-ji</a>, templo de camino al pabellón dorado con jardines muy bonitos.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/BBfJvwnbDXZ4THfj9"
+                                             class="underline decoration-sky-500 font-bold">Ryōan-ji</a>, templo de
+                    camino al pabellón dorado con jardines muy bonitos.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/KJuq2E6GUXPtMUSi7" class="underline decoration-sky-500 font-bold">Kinkakuji o Pabellón Dorado</a>, uno de los sitios más famosos de Kyoto.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/KJuq2E6GUXPtMUSi7"
+                                             class="underline decoration-sky-500 font-bold">Kinkakuji o Pabellón
+                    Dorado</a>, uno de los sitios más famosos de Kyoto.
                 </p>
             </div>
         </div>
