--- a/src/pages/itinerario/days/day5.astro
+++ b/src/pages/itinerario/days/day5.astro
@@ -32,24 +32,47 @@ const day = dias[4]
 
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg mt-1">Para descansar un poco de templos y paseos largos, en este dia se puede hacer una excursion un poco mas lejos de Kyoto.
+                <p class="text-lg mt-1">Para descansar un poco de templos y paseos largos, en este dia se puede hacer
+                    una excursion un poco mas lejos de Kyoto.
                 </p>
-                <p class="text-lg mt-1">Nos levantaremos para realizar un trayecto desde <a href="https://maps.app.goo.gl/uTU2FjTvsCsS9cMi9" class="underline decoration-sky-500 font-bold">Kyoto a Hiroshima</a>, el trayecto son poco más de 1h 30min.
+                <p class="text-lg mt-1">Nos levantaremos para realizar un trayecto desde <a
+                        href="https://maps.app.goo.gl/uTU2FjTvsCsS9cMi9" class="underline decoration-sky-500 font-bold">Kyoto
+                    a Hiroshima</a>, el trayecto son poco más de 1h 30min.
                 </p>
-                <p class="text-lg mt-1"><a href="https://maps.app.goo.gl/uTU2FjTvsCsS9cMi9" class="underline decoration-sky-500 font-bold">Trayecto desde Kyoto a Hiroshima</a></p>
+                <p class="text-lg mt-1"><a href="https://maps.app.goo.gl/uTU2FjTvsCsS9cMi9"
+                                           class="underline decoration-sky-500 font-bold">Trayecto desde Kyoto a
+                    Hiroshima</a></p>
                 <p class="text-lg mt-1">Aqui dejo una lista de sitios que visitar en Hiroshima</p>
-                <p class="text-lg mt-1"><a href="https://maps.app.goo.gl/7jQ1MsxZP1HrEd8ZA" class="underline decoration-sky-500 font-bold">Memorial y zona donde cayó la bomba atómica</a></p>
-                <p class="text-lg mt-1"><a href="https://maps.app.goo.gl/FzXkiL6LjZDT69ZF8" class="underline decoration-sky-500 font-bold">Castillo de Hiroshima</a></p>
-                <p class="text-lg mt-1"><a href="https://maps.app.goo.gl/Xtcrst53SSRDdVwFA" class="underline decoration-sky-500 font-bold">Okonomimura, donde hay solo restaurantes de Okonomiyaki</a></p>
+                <p class="text-lg mt-1"><a href="https://maps.app.goo.gl/7jQ1MsxZP1HrEd8ZA"
+                                           class="underline decoration-sky-500 font-bold">Memorial y zona donde cayó la
+                    bomba atómica</a></p>
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1695998614/japon-2weeks/s8gxsxd5bkaw1gvdkf3u.jpg">
+                <span class="text-center text-sm">Arco del memorial en Hiroshima</span>
+                <p class="text-lg mt-1"><a href="https://maps.app.goo.gl/FzXkiL6LjZDT69ZF8"
+                                           class="underline decoration-sky-500 font-bold">Castillo de Hiroshima</a></p>
+                <p class="text-lg mt-1"><a href="https://maps.app.goo.gl/Xtcrst53SSRDdVwFA"
+                                           class="underline decoration-sky-500 font-bold">Okonomimura, donde hay solo
+                    restaurantes de Okonomiyaki</a></p>
             </div>
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg font-bold mt-1">Después de ver Hiroshima cogemos un tren para ir a ver <a href="https://maps.app.goo.gl/dAroU6DCZmLrcyn8A" class="underline decoration-sky-500 font-bold">una de las mejores islas de Japón</a>, donde el ferry nos entra con el JR Pass.
+                <p class="text-lg font-bold mt-1">Después de ver Hiroshima cogemos un tren para ir a ver <a
+                        href="https://maps.app.goo.gl/dAroU6DCZmLrcyn8A" class="underline decoration-sky-500 font-bold">una
+                    de las mejores islas de Japón</a>, donde el ferry nos entra con el JR Pass.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/XpMJ8rPJFgzC1y899" class="underline decoration-sky-500 font-bold">Trayecto desde Hiroshima a Miyajimaguchi</a>
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/XpMJ8rPJFgzC1y899"
+                                             class="underline decoration-sky-500 font-bold">Trayecto desde Hiroshima a
+                    Miyajimaguchi</a>
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/dAroU6DCZmLrcyn8A" class="underline decoration-sky-500 font-bold">Miyajima</a>, isla santuario que cuenta con ciervos, un toori dentro del agua y varios templos.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/dAroU6DCZmLrcyn8A"
+                                             class="underline decoration-sky-500 font-bold">Miyajima</a>, isla santuario
+                    que cuenta con ciervos, un toori dentro del agua y varios templos.
                 </p>
-                <p class="text-lg mt-1">· Al acabar de ver la isla deberíamos volver a Kyoto para prepararnos para irnos.</p>
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1695998613/japon-2weeks/y9aqkflmeo9e3jd3lu5z.jpg">
+                <span class="text-center text-sm">Tori flotante de Miyajima</span>
+                <p class="text-lg mt-1">· Al acabar de ver la isla deberíamos volver a Kyoto para prepararnos para
+                    irnos.</p>
             </div>
         </div>
 
