--- a/src/pages/itinerario/days/day7.astro
+++ b/src/pages/itinerario/days/day7.astro
@@ -33,21 +33,37 @@ const day = dias[6]
             <div class="px-2 pt-4 md:w-1/2">
                 <p class="text-lg mt-1">Este día podemos permitirnos dormir un poco más y descansar el cuerpo.
                 </p>
-                <p class="text-lg mt-1">Después de habernos pegado el festín en Kobe iremos a visitar <a href="https://maps.app.goo.gl/WFKYHCJ6wQY3FCTp8" class="underline decoration-sky-500 font-bold">Osaka</a>, que queda a 30 minutos en tren desde Kyoto.
+                <p class="text-lg mt-1">Después de habernos pegado el festín en Kobe iremos a visitar <a
+                        href="https://maps.app.goo.gl/WFKYHCJ6wQY3FCTp8" class="underline decoration-sky-500 font-bold">Osaka</a>,
+                    que queda a 30 minutos en tren desde Kyoto.
                 </p>
-                <p class="text-lg mt-1">Así describen Osaka la mayoría de gente de Japón: calles llenas de luces y olor a comida, ruido, gente, restaurantes con todo tipo de manjares, retrofuturismo y ese carácter afable de sus habitantes. Ōsaka es la ciudad rebelde de Japón.
+                <p class="text-lg mt-1">Así describen Osaka la mayoría de gente de Japón: calles llenas de luces y olor
+                    a comida, ruido, gente, restaurantes con todo tipo de manjares, retrofuturismo y ese carácter afable
+                    de sus habitantes. Ōsaka es la ciudad rebelde de Japón.
                 </p>
-                <p class="text-lg mt-1">Dato importante: en Osaka se come muy bien, para muchos japoneses es donde está la mejor comida. <a href="https://japonismo.com/blog/las-once-mejores-comidas-de-osaka" class="underline decoration-sky-500 font-bold">Guia para comer en Osaka</a></p>
+                <p class="text-lg mt-1">Dato importante: en Osaka se come muy bien, para muchos japoneses es donde está
+                    la mejor comida. <a href="https://japonismo.com/blog/las-once-mejores-comidas-de-osaka"
+                                        class="underline decoration-sky-500 font-bold">Guia para comer en Osaka</a></p>
             </div>
             <div class="px-2 pt-4 md:w-1/2">
                 <p class="text-lg font-bold mt-1">Esta sera la ruta de sitios que se podria visitar:</p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/AtkPdk11pmKfpVX5A" class="underline decoration-sky-500 font-bold">Umeda Sky</a>, una construcción sin ningún tipo de sentido donde se ve todo Osaka
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/AtkPdk11pmKfpVX5A"
+                                             class="underline decoration-sky-500 font-bold">Umeda Sky</a>, una
+                    construcción sin ningún tipo de sentido donde se ve todo Osaka
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/xqHSmb7MbSbrTNie9" class="underline decoration-sky-500 font-bold">Castillo de Osaka</a>, uno de los mejores castillos de Japón, no hace falta entrar lo podemos ver desde fuera.
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1696000525/japon-2weeks/pml3hmbqjtmx9nzb9ait.jpg">
+                <span class="text-center text-sm">Castillo de Osaka, uno de los 12 castillos originales</span>
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/xqHSmb7MbSbrTNie9"
+                                             class="underline decoration-sky-500 font-bold">Castillo de Osaka</a>, uno
+                    de los mejores castillos de Japón, no hace falta entrar lo podemos ver desde fuera.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/omw3Vd7MHS5URMdj7" class="underline decoration-sky-500 font-bold">Dotonbori</a>, barrio futurista de Osaka, parece que estás en Cyberpunk.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/omw3Vd7MHS5URMdj7"
+                                             class="underline decoration-sky-500 font-bold">Dotonbori</a>, barrio
+                    futurista de Osaka, parece que estás en Cyberpunk.
                 </p>
-                <p class="text-lg font-bold mt-1">Este dia podriamos salir por la calles de Dotonbori, donde por la noche cobra mas vida todavia.
+                <p class="text-lg font-bold mt-1">Este dia podriamos salir por la calles de Dotonbori, donde por la
+                    noche cobra mas vida todavia.
                 </p>
             </div>
         </div>
