--- a/src/pages/itinerario/days/day3.astro
+++ b/src/pages/itinerario/days/day3.astro
@@ -31,28 +31,56 @@ const day = dias[2]
         </div>
         <div class="bg-zinc-900/30 mt-6 flex-1 p-6 blur-100 md:flex">
             <div class="px-2 pt-4 md:w-1/2">
-                <p class="text-lg mt-1">En el primer día en Kyoto nos centraremos en la parte Este de Kyoto, siguiendo un recorrido desde la estación de Kyoto al Ginkaku-ji o Pabellón de plata.
+                <p class="text-lg mt-1">En el primer día en Kyoto nos centraremos en la parte Este de Kyoto, siguiendo
+                    un recorrido desde la estación de Kyoto al Ginkaku-ji o Pabellón de plata.
                 </p>
-                <p class="text-lg mt-1">Pasaremos por sitios historicos de esta parte de la ciudad, como el famoso barrio de geishas y el paseo de los filosofos, que aunque no sea primavera, es muy disfrutable igual.
+                <p class="text-lg mt-1">Pasaremos por sitios historicos de esta parte de la ciudad, como el famoso
+                    barrio de geishas y el paseo de los filosofos, que aunque no sea primavera, es muy disfrutable
+                    igual.
                 </p>
             </div>
             <div class="px-2 pt-4 md:w-1/2">
                 <p class="text-lg font-bold mt-1">Esta podria ser una ruta de los lugares que visitar:</p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/FMZoRwK9Aot4SvaW9" class="underline decoration-sky-500 font-bold">Estación de Kyoto</a>, famosa estación enorme desde donde saldremos a muchos viajes.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/FMZoRwK9Aot4SvaW9"
+                                             class="underline decoration-sky-500 font-bold">Estación de Kyoto</a>,
+                    famosa estación enorme desde donde saldremos a muchos viajes.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/tnbR4DE3WVfiPUY16" class="underline decoration-sky-500 font-bold">Sanjūsangen-dō</a>, templo con 1001 estatuas, nos pilla bien de camino y abre muy pronto.
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/C5YPibvhU2FbFK1y7" class="underline decoration-sky-500 font-bold">Kiyomizu-dera</a>, conjunto de templos famoso por su enorme mirador.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/tnbR4DE3WVfiPUY16"
+                                             class="underline decoration-sky-500 font-bold">Sanjūsangen-dō</a>, templo
+                    con 1001 estatuas, nos pilla bien de camino y abre muy pronto.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/C5YPibvhU2FbFK1y7"
+                                             class="underline decoration-sky-500 font-bold">Kiyomizu-dera</a>, conjunto
+                    de templos famoso por su enorme mirador.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/h17Z3XsCUVirMXgK6" class="underline decoration-sky-500 font-bold">Sannenzaka y Chawanzaka</a>, famosas calles de Kyoto.
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1695996141/japon-2weeks/v5xfeks3hxfpdjsj1xqf.jpg">
+                <span class="text-center text-sm">Kiyomizu-dera al atardecer</span>
+
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/h17Z3XsCUVirMXgK6"
+                                             class="underline decoration-sky-500 font-bold">Sannenzaka y Chawanzaka</a>,
+                    famosas calles de Kyoto.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/nbHsRdAiNtTzSkxMA" class="underline decoration-sky-500 font-bold">Gion y Pontocho</a>, barrio antiguo, donde podremos comer en alguno de sus restaurantes.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/nbHsRdAiNtTzSkxMA"
+                                             class="underline decoration-sky-500 font-bold">Gion y Pontocho</a>, barrio
+                    antiguo, donde podremos comer en alguno de sus restaurantes.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/ymsc6T6kCxFk3bZg8" class="underline decoration-sky-500 font-bold">Santuario Heian</a>, santuario con un jardín y lago precioso.
+                <img class="mt-2"
+                     src="https://res.cloudinary.com/djklfwvv2/image/upload/v1695996990/japon-2weeks/r5uvfxiq518fsadzigdq.jpg">
+                <span class="text-center text-sm">Plato en Sushi Tetsu, restaurante en Pontocho</span>
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/ymsc6T6kCxFk3bZg8"
+                                             class="underline decoration-sky-500 font-bold">Santuario Heian</a>,
+                    santuario con un jardín y lago precioso.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/rpsQAkRaLcCTLPPn6" class="underline decoration-sky-500 font-bold">Nanzen-ji</a>, santuario que da comienzo al paseo de los filósofos.
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/rpsQAkRaLcCTLPPn6"
+                                             class="underline decoration-sky-500 font-bold">Nanzen-ji</a>, santuario que
+                    da comienzo al paseo de los filósofos.
                 </p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/tbRbrZPwywxdR2NH7" class="underline decoration-sky-500 font-bold">Paseo de los filósofos</a>, el mítico paseo de los cerezos.</p>
-                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/e7smqvqMG5vhsGfE8" class="underline decoration-sky-500 font-bold">Ginkaku-ji</a>, también conocido como el Pabellón de plata.</p>
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/tbRbrZPwywxdR2NH7"
+                                             class="underline decoration-sky-500 font-bold">Paseo de los filósofos</a>,
+                    el mítico paseo de los cerezos.</p>
+                <p class="text-lg mt-1">· <a href="https://maps.app.goo.gl/e7smqvqMG5vhsGfE8"
+                                             class="underline decoration-sky-500 font-bold">Ginkaku-ji</a>, también
+                    conocido como el Pabellón de plata.</p>
             </div>
         </div>
         <div
